Optimization: Faster positional calls in some cases with 3.9 or higher

--- a/nuitka/codegen/templates_c/CodeTemplateCallsPositional.c.j2
+++ b/nuitka/codegen/templates_c/CodeTemplateCallsPositional.c.j2
@@ -161,7 +161,7 @@ PyObject *CALL_FUNCTION_WITH_ARGS{{args_count}}(PyObject *called, PyObject *cons
 
             return result;
         }
-    } else if (PyCFunction_Check(called)) {
+    } else if (PyCFunction_CheckExact(called)) {
         // Try to be fast about wrapping the arguments.
         int flags = PyCFunction_GET_FLAGS(called) & ~(METH_CLASS | METH_STATIC | METH_COEXIST);
 
